SVMP specific changes for building VM images.
Add additional changes to the makefile so that svmp images can be built.
Update default disklayout to work for virtualbox and leave room for
customization for openstack.

Add support for the following make targets:
android_system_disk
android_system_disk_vdi
android_system_disk_vmdk
android_disk_zip
android_disk_zip_vdi
android_disk_zip_vmdk

--- a/android_img_system_layout.conf
+++ b/android_img_system_layout.conf
@@ -37,9 +37,8 @@ device {
         # (extended partion begins)
 
         # /dev/sdX5
-        third_party {
-            type linux
-            len 8064
+        inst_sdcard {
+            type fat32
         }
 
         # /dev/sdX6
