Revert to stock in prep for refactoring
Bring the diskinstaller back to unmodified AOSP stock to prepare for
refactoring the SVMP VM build targets as well as adding a bunch of new
ones.

This reverts commit 44fd8f7aa3ea2a60e000a6860f3ca1c66144613d.
This reverts commit bf21bcf9cb766aa8bf774bc57573139508d3c2e2.

Change-Id: Ic90103e5672e350f096daf91d867ac03d17fd11c

--- a/android_img_system_layout.conf
+++ b/android_img_system_layout.conf
@@ -37,8 +37,9 @@ device {
         # (extended partion begins)
 
         # /dev/sdX5
-        inst_sdcard {
-            type fat32
+        third_party {
+            type linux
+            len 8064
         }
 
         # /dev/sdX6
